finish work with students app

--- a/students_administration/index.html
+++ b/students_administration/index.html
@@ -39,7 +39,7 @@
 
     <table class="table table-striped table-hover">
         <thead>
-          <td>Nume</td>
+          <td id="tableHeadNume">Nume</td>
           <td>Prenume</td>
           <td>Patronimic</td>
           <td>Data de nastere</td>
@@ -47,14 +47,7 @@
           <td>Facultate</td>
         </thead>
         <tbody id="tableBody">
-          <tr>
-            <td id="tableNume"></td>
-            <td id="tablePrenume"></td>
-            <td id="tablePatronimic"></td>
-            <td id="tableData"></td>
-            <td id="tableStudii"></td>
-            <td id="tableFacultate"></td>
-          </tr>
+
         </tbody>
       </table>
 
