added food gallery and how to order section

--- a/sushi-website/index.html
+++ b/sushi-website/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <section>
+    <section id="futures-section">
         <div>
             <h2>Unique creations</h2>
             <p id="headline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur saepe corrupti unde quisquam fugit</p>
@@ -43,8 +43,7 @@
             <i class="icon ion-ios-restaurant features-icon"></i>
             <p>
                 After shaking up the Sushi world, the young sushi craftsman Hiroyuki Sato from "Hakkoku" 
-                opens a new restaurant. After obtaining a Michelin star in only half a year as the Head Chef 
-                at "Sushi Tokami" in Ginza, he now serves authentic Edomae sushi at this family friendly shop.
+                opens a new restaurant. After obtaining a Michelin star in only half a year as the Head Chef.
             </p>
         </div>
         <div class="col-3">
@@ -70,6 +69,77 @@
                 officiis suscipit cum tempore, expedita eos, rerum quam! A, quidem? Veritatis numquam repellat deserunt 
                 adipisci consequuntur!
             </p>
+        </div>
+    </section>
+
+    <section id="food-images-section">
+        <ul class="food-images-container">
+            <li>
+                <figure class="food-image">
+                    <img src="./images/1.jpg" alt="1">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/2.jpg" alt="2">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/3.jpg" alt="3">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/4.jpg" alt="4">
+                </figure>
+            </li>
+        </ul>
+
+        <ul class="food-images-container">
+            <li>
+                <figure class="food-image">
+                    <img src="./images/5.webp" alt="5">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/6.jpg" alt="6">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/7.jpg" alt="7">
+                </figure>
+            </li>
+            <li>
+                <figure class="food-image">
+                    <img src="./images/8.jpg" alt="8">
+                </figure>
+            </li>
+        </ul>
+    </section>
+
+    <section id="how-to-order-section">
+        <h2>How to order</h2>
+        <div class="col-4" id="phone-image-container">
+            <img src="./images/phone.jpg" alt="phone" id="phone-image">
+        </div>
+        <div class="col-5">
+            <div class="order-step">
+                <div>1</div>
+                <p>Select your favorite creation</p>
+            </div>
+            <div class="order-step">
+                <div>2</div>
+                <p>Order it in mobile app or our website</p>
+            </div>
+            <div class="order-step">
+                <div>3</div>
+                <p>Take the command and happy eating</p>
+            </div>
+            <a href="#" class="app-button"><img src="./images/play-store-badge.png" alt=""></a>
+            <a href="#" class="app-button"><img src="./images/app-store-badge.png" alt=""></a>
         </div>
     </section>
 </body>
