added cities, feedback, contact part 1 sections

--- a/sushi-website/index.html
+++ b/sushi-website/index.html
@@ -120,6 +120,82 @@
         </ul>
     </section>
 
+    <section id="cities-section" class="float-clearing">
+        <h2>Where find our</h2>
+        <div>
+            <div class="col-3">
+                <img src="./images/chisinau.jpg" alt="chisinau">
+                <h3>Chisinau</h3>
+                <div class="city-info">
+                    <i class="icon ion-md-home city-icon"></i>
+                    str.Tudor Vladimirescu, 5
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-call city-icon"></i>
+                    +37368327374
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-mail city-icon"></i>
+                    ocean-sushi@gmail.com
+                </div>
+            </div>
+        </div>
+        <div class="center-horinzontally">
+            <div class="col-3">
+                <img src="./images/balti.JPG" alt="balti">
+                <h3>Balti</h3>
+                <div class="city-info">
+                    <i class="icon ion-md-home city-icon"></i>
+                    str.Stefan cel Mare, 10
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-call city-icon"></i>
+                    +37368327375
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-mail city-icon"></i>
+                    ocean-sushi-balti@gmail.com
+                </div>
+            </div>
+        </div>
+        <div class="center-horinzontally">
+            <div class="col-3">
+                <img src="./images/comrat.jpg" alt="comrat">
+                <h3>Comrat</h3>
+                <div class="city-info">
+                    <i class="icon ion-md-home city-icon"></i>
+                    str.Kiev, 7
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-call city-icon"></i>
+                    +37368327376
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-mail city-icon"></i>
+                    ocean-sushi-comrat@gmail.com
+                </div>
+            </div>
+        </div>
+        <div class="center-horinzontally">
+            <div class="col-3">
+                <img src="./images/edinet.jpg" alt="edinet">
+                <h3>Edinet</h3>
+                <div class="city-info">
+                    <i class="icon ion-md-home city-icon"></i>
+                    str.Ion Neculce, 4
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-call city-icon"></i>
+                    +37368327377
+                </div>
+                <div class="city-info">
+                    <i class="icon ion-md-mail city-icon"></i>
+                    ocean-sushi-edinet@gmail.com
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="how-to-order-section">
         <h2>How to order</h2>
         <div class="col-4" id="phone-image-container">
@@ -140,6 +216,103 @@
             </div>
             <a href="#" class="app-button"><img src="./images/play-store-badge.png" alt=""></a>
             <a href="#" class="app-button"><img src="./images/app-store-badge.png" alt=""></a>
+        </div>
+    </section>
+
+    <section id="feedback-section" class="float-clearing">
+        <h2>100k+ likes our sushi 🥰</h2>
+        <div>
+            <div class="col-4">
+                <blockquote>
+                    <cite>
+                        <img src="./images/user1.jpg" alt="user1">
+                    </cite>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit a numquam sit impedit saepe, 
+                        praesentium, cupiditate eum aliquid tempora excepturi aliquam, temporibus officia est reprehenderit 
+                        vero vel eius veniam eos!
+                    </div>
+                </blockquote>
+            </div>
+            <div class="col-4">
+                <blockquote>
+                    <cite>
+                        <img src="./images/user2.jpg" alt="user2">
+                    </cite>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit a numquam sit impedit saepe, 
+                        praesentium, cupiditate eum aliquid tempora excepturi aliquam, temporibus officia est reprehenderit 
+                        vero vel eius veniam eos!
+                    </div>
+                </blockquote>
+            </div>
+            <div class="col-4">
+                <blockquote>
+                    <cite>
+                        <img src="./images/user3.jpg" alt="user3">
+                    </cite>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit a numquam sit impedit saepe, 
+                        praesentium, cupiditate eum aliquid tempora excepturi aliquam, temporibus officia est reprehenderit 
+                        vero vel eius veniam eos!
+                    </div>
+                </blockquote>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact-form-section">
+        <h2>we are happy to hear from you</h2>
+        <div>
+            <div class="form-row float-clearing">
+                <div class="col-2">
+                    <label for="name">Your name</label>
+                </div>
+                <div class="col-4">
+                    <input type="text" id="name" placeholder="Enter your name">
+                </div>
+            </div>
+            <div class="form-row float-clearing">
+                <div class="col-2">
+                    <label for="email">Your email</label>
+                </div>
+                <div class="col-4">
+                    <input type="email" id="email" placeholder="Enter your email">
+                </div>
+            </div>
+            <div class="form-row float-clearing">
+                <div class="col-2">
+                    <label for="subject">Select subject</label>
+                </div>
+                <div class="col-4">
+                    <select name="subject" id="subject">
+                        <option value="feedback">feedback</option>
+                        <option value="question">question</option>
+                        <option value="other">other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-row float-clearing">
+                <div class="col-2">
+                    <label for="news">Subscribe to newsletter</label>
+                </div>
+                <div class="col-4">
+                    <input type="checkbox" id="news" checked> Yes
+                </div>
+            </div>
+            <div class="form-row float-clearing">
+                <div class="col-2">
+                    <label for="text">Write text</label>
+                </div>
+                <div class="col-4">
+                    <textarea name="text" id="text" cols="30" rows="10" placeholder="Input text"></textarea>
+                </div>
+            </div>
+            <div class="form-row float-clearing">
+                <div class="col-4">
+                    <input type="submit" value="submit">
+                </div>
+            </div>
         </div>
     </section>
 </body>
