--- a/sushi-website/index.html
+++ b/sushi-website/index.html
@@ -11,11 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/ionicons.min.css">
     <title>Ocean-Sushi</title>
+    <script defer src="./scripts/jquery-3.7.0.min.js"></script>
+    <script defer src="./scripts/jquery.waypoints.min.js"></script>
+    <script defer src="./scripts/script.js"></script>
 </head>
 <body>
     <header id="header">
-        <img id="logo-image" src="./images/sushi-logo.png" alt="logo">
         <nav>
+            <img id="logo-image" src="./images/sushi-logo.png" alt="logo">
             <p id="logo-text"><a href="#">Ocean Sushi</a></p>
             <ul id="main-nav">
                 <li><a href="#header">Home</a></li>
