--- a/sushi-website/index.html
+++ b/sushi-website/index.html
@@ -11,6 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/ionicons.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons//favicon-16x16.png">
+    <link rel="manifest" href="./images/favicons//site.webmanifest">
+    <link rel="mask-icon" href="./images/favicons//safari-pinned-tab.svg" color="#d55b5b">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Ocean-Sushi</title>
     <script defer src="./scripts/jquery-3.7.0.min.js"></script>
     <script defer src="./scripts/jquery.waypoints.min.js"></script>
@@ -28,6 +37,8 @@
                 <li><a href="#how-to-order-section">Order Online</a></li>
                 <li><a href="#cities-section">Contact</a></li>
             </ul>
+            <div class="float-clearing"></div>
+            <a class="mobile-menu-button"><i class="icon ion-ios-menu"></i></a>
         </nav>
         <div class="header-text" id="header-text">
             <h1 id="header-title">The real ocean sushi</h1>
