--- a/sushi-website/index.html
+++ b/sushi-website/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="real sushi from ocean products">
+
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/animate.css">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -91,22 +93,22 @@
         <ul class="food-images-container">
             <li>
                 <figure class="food-image">
-                    <img src="./images/1.jpg" alt="1">
+                    <img src="./images/1.jpg" alt="food-image-1">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/2.jpg" alt="2">
+                    <img src="./images/2.jpg" alt="food-image-2">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/3.jpg" alt="3">
+                    <img src="./images/3.jpg" alt="food-image-3">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/4.jpg" alt="4">
+                    <img src="./images/4.jpg" alt="food-image-4">
                 </figure>
             </li>
         </ul>
@@ -114,22 +116,22 @@
         <ul class="food-images-container">
             <li>
                 <figure class="food-image">
-                    <img src="./images/5.webp" alt="5">
+                    <img src="./images/5.jpg" alt="food-image-5">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/6.jpg" alt="6">
+                    <img src="./images/6.jpg" alt="food-image-6">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/7.jpg" alt="7">
+                    <img src="./images/7.jpg" alt="food-image-7">
                 </figure>
             </li>
             <li>
                 <figure class="food-image">
-                    <img src="./images/8.jpg" alt="8">
+                    <img src="./images/8.jpg" alt="food-image-8">
                 </figure>
             </li>
         </ul>
